	* drivers/usbdev/cdcacm.c, composite.c, usbmsc.c:  uninitialization
	  logic cause re-use of a stale pointer.  Changed to a two pass
	  uninitialization for the case of the composite driver:  Memory
	  resources are not freed until the second uninitialization pass.
	  From David Sidrane (2011-11-5).
	* arch/arm/src/sama5/sam_pwm.c and .h:  Add PWM driver for SAMA5
	  untested on initial checkout (not even incorporated in to build
	  system) (2013-11-6).
	* arch/arm/src/sama5/Make.defs and Kconfig:  SAMA5 PWM driver now
	  incorporated into build and configuration system.  Builds with
	  no errors (2013-11-6).
	* configs/sama5d3x-ek:  Add support for the PWM test for the
	  SAMA5D3x-EK board (2013-11-6).
	* arch/arm/src/sama5/sam_pwm.c and .h: SAMA5 PWM driver is now
	  function (2013-11-7).
	* include/nuttx/audio/i2s.h:  First cut at an I2S interface
	  definition.  This initial definition is sparse will will
	  probably evolve significantly (2011-11-7).
	* arch/arm/src/sama5/sam_ssc.c and .h:  Skeleton and build setup
	  for a forthcoming SSC (aka I2S) driver for the SAMA5.  The
	  initial check-in is just the SAMA5 SPI driver gutted and hacked
	  to use the I2S interface.  More coming (2013-11-7).
	* arch/arm/src/stm32 and arch/arm/include/stm32:  Added support for
	  the STM32F429.  From Ken Pettit (2013-11-7).
	* configs/stm32f429i-disco:  Support for the STM32F429I-Discovery
	  board from Ken Pettit (2013-11-7).
	* arch/arm/src/stm32/stm32_usbdev.c:  The long outstanding bug
	  involviing the handling of OUT SETUP commands has been fixed in
	  the STM32 F1 USB device driver by David Sidrane (2013-11-7).
	* configs/spark/composite/cdc-acm.inf:  Windows CDC/ACM driver
	  provided by David Sidrane (2013-11-7).
	* configs/spark/usbserial.c:  Add an apps/examples/usbserial
	  configuration for the Spark.  From David Sidran (2013-11-7).
	* arch/arm/src/sama5/sam_ssc.c and .h:  First cut of SAMA5
	  SSC/I2S driver is code complete (2013-11-9).
