@@ -118,10 +118,16 @@ endif
 ifeq ($(CONFIG_STM32_OTGFS),y)
 CHIP_CSRCS += stm32_otgfsdev.c
 endif
+ifeq ($(CONFIG_STM32_OTGFS2),y)
+CHIP_CSRCS += stm32_otgfsdev.c
+endif
 endif
 
 ifeq ($(CONFIG_USBHOST),y)
 ifeq ($(CONFIG_STM32_OTGFS),y)
+CHIP_CSRCS += stm32_otgfshost.c
+endif
+ifeq ($(CONFIG_STM32_OTGFS2),y)
 CHIP_CSRCS += stm32_otgfshost.c
 endif
 endif
