@@ -62,7 +62,7 @@
 
 #include "stm32_otgfs.h"
 
-#if defined(CONFIG_USBDEV) && defined(CONFIG_STM32_OTGFS)
+#if defined(CONFIG_USBDEV) && (defined(CONFIG_STM32_OTGFS) || defined(CONFIG_STM32_OTGFS2))
 
 /*******************************************************************************
  * Definitions
@@ -274,6 +274,13 @@
 
 #ifndef MAX
 #  define MAX(a,b) ((a) > (b) ? (a) : (b))
+#endif
+
+/* For OTGFS2 mode (FS mode of HS module), remap the IRQ number *****************/
+
+#ifdef CONFIG_STM32_OTGFS2
+#  undef  STM32_IRQ_OTGFS
+#  define STM32_IRQ_OTGFS   STM32_IRQ_OTGHS
 #endif
 
 /*******************************************************************************
@@ -2041,10 +2048,7 @@ static void stm32_usbreset(struct stm32_usbdev_s *priv)
 static inline void stm32_ep0out_testmode(FAR struct stm32_usbdev_s *priv,
                                          uint16_t index)
 {
-  uint32_t regval;
   uint8_t testmode;
-
-  regval = stm32_getreg(STM32_OTGFS_DCTL);
 
   testmode = index >> 8;
   switch (testmode)
@@ -4416,7 +4420,6 @@ static int stm32_ep_submit(FAR struct usbdev_ep_s *ep, FAR struct usbdev_req_s *
 static int stm32_ep_cancel(FAR struct usbdev_ep_s *ep, FAR struct usbdev_req_s *req)
 {
   FAR struct stm32_ep_s *privep = (FAR struct stm32_ep_s *)ep;
-  FAR struct stm32_usbdev_s *priv;
   irqstate_t flags;
 
 #ifdef CONFIG_DEBUG
@@ -4428,7 +4431,6 @@ static int stm32_ep_cancel(FAR struct usbdev_ep_s *ep, FAR struct usbdev_req_s *
 #endif
 
   usbtrace(TRACE_EPCANCEL, privep->epphy);
-  priv = privep->dev;
 
   flags = irqsave();
 
@@ -5140,6 +5142,16 @@ static void stm32_hwinitialize(FAR struct stm32_usbdev_s *priv)
 
   stm32_putreg(OTGFS_GAHBCFG_TXFELVL, STM32_OTGFS_GAHBCFG);
 
+  /* For OTGFS2 mode (FS mode of the HS module), we must select the FS PHY
+   * mode prior to issuing a soft reset.
+   */
+
+#ifdef CONFIG_STM32_OTGFS2
+  regval  = stm32_getreg(STM32_OTGFS_GUSBCFG);
+  regval |= OTGFS_GUSBCFG_PHYSEL;
+  stm32_putreg(regval, STM32_OTGFS_GUSBCFG);
+#endif
+
   /* Common USB OTG core initialization */
   /* Reset after a PHY select and set Host mode.  First, wait for AHB master
    * IDLE state.
@@ -5397,9 +5409,15 @@ void up_usbinitialize(void)
    * *Pins may vary from device-to-device.
    */
 
+#ifdef CONFIG_STM32_OTGFS2
+  stm32_configgpio(GPIO_OTGFS2_DM);
+  stm32_configgpio(GPIO_OTGFS2_DP);
+  stm32_configgpio(GPIO_OTGFS2_ID);    /* Only needed for OTG */
+#else
   stm32_configgpio(GPIO_OTGFS_DM);
   stm32_configgpio(GPIO_OTGFS_DP);
   stm32_configgpio(GPIO_OTGFS_ID);    /* Only needed for OTG */
+#endif
 
   /* SOF output pin configuration is configurable. */
 
