@@ -197,8 +197,13 @@ static inline void rcc_enableahb1(void)
 #ifdef CONFIG_STM32_OTGHS
   /* USB OTG HS */
 
-  regval |= (RCC_AHB1ENR_OTGHSEN|RCC_AHB1ENR_OTGHSULPIEN);
+#ifdef CONFIG_STM32_OTGFS2
+  regval |= RCC_AHB1ENR_OTGHSEN;
+#else
+  regval |= RCC_AHB1ENR_OTGHSULPIEN;
 #endif
+
+#endif  /* CONFIG_STM32_OTGHS */
 
   putreg32(regval, STM32_RCC_AHB1ENR);   /* Enable peripherals */
 }
