@@ -6001,4 +6001,9 @@
 	  configuration for the Spark.  From David Sidran (2013-11-7).
 	* arch/arm/src/sama5/sam_ssc.c and .h:  First cut of SAMA5
 	  SSC/I2S driver is code complete (2013-11-9).
+	* arch/arm/src/stm32 (numerous files):  OTG FS device and host
+	  drivers extended so that they can support either the OTG FS
+	  peripheral or the OTG HS peripheral (in FS mode).  This was
+	  done as a quick way to get USB support on the STM32F429 which
+	  has only OTG HS.  From Ken Pettit (2013-11-9).
 
